# py-abstractions

./: __init__.py  crud.py  pyproject.toml  rest.py
.github/workflows/: python-publish.yml
