[tool.poetry]
name = "py_abstractions"
version = "0.1.0"
description = "A Python library providing abstractions such as CRUD and REST operations."
authors = ["Umut Guler <developer@uguler.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/umutguler/py-abstractions"
repository = "https://github.com/umutguler/py-abstractions"
keywords = ["crud", "rest", "abstractions", "python"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
