[project]
name = "py-abstractions"
version = "0.1.0"
description = "A Python library providing abstractions such as CRUD and REST operations."
authors = [
    { name = "Umut Guler", email = "developer@uguler.io" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
